--- a/snake/index.html
+++ b/snake/index.html
@@ -9,7 +9,8 @@
     <title>بازی مار - Snake Game</title>
     <link rel="stylesheet" href="../Vazirmatn-font-face.css">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="../assets/tool-wrapper.css">
 </head>
 <body>
     <div id="app">
@@ -147,6 +148,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="assets/script.js"></script>
+    <script src="../assets/tool-wrapper.js"></script>
 </body>
 </html>
