--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div style="display: flex; gap: 12px; align-items: center;">
                 <div class="search-box">
                     <span class="search-icon">🔍</span>
-                    <input type="text" class="search-input" id="searchInput" placeholder="جستجوی ابزار..." />
+                    <input type="text" class="search-input" id="searchInput" placeholder="جستجوی بازی..." />
                 </div>
                 <button class="header-contact-btn" id="openContactBtn" title="تماس با ما / گزارش مشکل"
                     aria-label="Contact us">
@@ -59,7 +59,7 @@
 
         <section class="card" aria-label="Tools list">
             <div class="stats-bar">
-                <span>تعداد ابزارها: <span class="count" id="totalCount">0</span></span>
+                <span>تعداد بازی: <span class="count" id="totalCount">0</span></span>
                 <span id="filteredInfo"></span>
             </div>
             <nav aria-label="Tools">
